Cabal-Version:       3.0
Name:                muesliswapmyield
Version:             1.0

common c
  default-language: Haskell2010
  default-extensions:
    ExplicitForAll
    ScopedTypeVariables
    DeriveGeneric
    StandaloneDeriving
    DeriveLift
    GeneralizedNewtypeDeriving
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    LambdaCase
    MultiParamTypeClasses
    TypeOperators
    FlexibleInstances
    NamedFieldPuns
    TypeFamilies
    FlexibleContexts
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DataKinds

library
  import: c
  hs-source-dirs: src
  exposed-modules:
    MuesliSwapMYield.Minting
  build-depends:
    , aeson
    , base ^>= 4.14.1.0
    , cardano-api
    , cardano-ledger-alonzo
    , containers
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutonomy
    , hex-text

executable muesliswapmyield
  import: c
  hs-source-dirs: src/MuesliSwapMYield
  main-is:        MuesliSwapMYield.hs
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:
    , cardano-api
    , cardano-api
    , cardano-ledger-alonzo
    , muesliswapmyield
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , base ^>= 4.14.1.0
    , serialise
    , bytestring